After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 634324 - [Wikimedia] Gaussian blur with matrix transformation is not rendered
[Wikimedia] Gaussian blur with matrix transformation is not rendered
Status: RESOLVED FIXED
Product: librsvg
Classification: Core
Component: general
2.26.x
Other Linux
: Normal normal
: ---
Assigned To: librsvg maintainers
librsvg maintainers
: 756815 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2010-11-08 15:22 UTC by Pedro Villavicencio
Modified: 2017-06-20 15:14 UTC
See Also:
GNOME target: ---
GNOME version: 2.31/2.32


Attachments
Reduced testcase (622 bytes, image/svg+xml)
2011-02-05 08:23 UTC, Kurosawa Takeshi
Details

Description Pedro Villavicencio 2010-11-08 15:22:15 UTC
this report has been filed here:

https://bugs.launchpad.net/ubuntu/+source/librsvg/+bug/670178

The attached stars.svg is rendered incorrectly in Eye of Gnome, Nautilus preview, Gimp import, Evince etc. The top left star does not have its shadow.

Works correctly in inkscape, Firefox, Chrome.

Created in inkscape.

file:

https://bugs.launchpad.net/ubuntu/+source/librsvg/+bug/670178/+attachment/1721200/+files/stars.svg
Comment 1 Kurosawa Takeshi 2011-02-05 08:23:42 UTC
Created attachment 180162 [details]
Reduced testcase

The problem seems happen when a svg file contains a shape which has filter and transform="matrix(...)".
Comment 2 madbiologist 2015-07-28 14:40:48 UTC
Still occurring with librsvg 2.40.2. Also still occurring in a slightly different form with librsvg 2.40.9 - for the original stars.svg the top left star has solid black lines for some of the shadows and nothing for the remaining shadows.

With librsvg 2.40.9 the stars.reduced.svg testcase displays as a black star with solid edges instead of blurry shadow edges.  With librsvg 2.40.2 it did not display at all.
Comment 3 madbiologist 2017-04-17 11:48:51 UTC
Still occurring with librsvg2-2 2.40.16-2~svn1
Comment 4 Federico Mena Quintero 2017-04-18 16:33:04 UTC
Thanks for the report.  We were rejecting blurs when there was a negative-scaling transformation matrix.

The fix is in commit f7ccfbff857b5ec8d7ace494e20f28d97f1c91f1 in the master branch; that's for the 2.41 series of librsvg.  

Please note that this fix won't go automatically into 2.40.x.  You can cherry-pick that commit into your sources if you are using 2.40.x; it is still in the C code and does not affect the Rust part.

I noticed that the rendered result has a smaller blur than what Firefox renders.  I'm not sure if this is due to just using a different blurring algorithm, or if it is a genuine bug in our blurring code.
Comment 5 Federico Mena Quintero 2017-06-20 15:14:58 UTC
*** Bug 756815 has been marked as a duplicate of this bug. ***